# radar-app-test-task

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
backend/: CMakeLists.txt
backend/include/: network-server.h  sim-engine.h
backend/src/: main.cpp  network-server.cpp  sim-engine.cpp
common/include/: target.h
common/src/: target.cpp
scripts/: build-linux.sh  build-unix.sh  build-win-static.ps1  build-win.ps1  run-unix.sh  run-win.ps1
ui/: CMakeLists.txt
ui/include/: network-client.h  radar-widget.h  window.h
ui/src/: main.cpp  network-client.cpp  radar-widget.cpp  window.cpp
